--- a/src/datepickerVars.scss
+++ b/src/datepickerVars.scss
@@ -86,5 +86,5 @@
   --adp-overlay-background-color: rgba(0, 0, 0, .3);
   --adp-overlay-transition-duration: .3s;
   --adp-overlay-transition-ease: ease-out;
-
+  --adp-overlay-z-index: 100;
 }
